Closed
Bug 395423
Opened 19 years ago
Closed 17 years ago
Favicon in location bar can get out of sync with actual page favicon when closing or switching tabs while editing location bar
Categories
(Camino Graveyard :: Location Bar & Autocomplete, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bugzilla-graveyard, Assigned: bugzilla-graveyard)
References
Details
Attachments
(1 file, 2 obsolete files)
|
7.26 KB,
patch
|
chris
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
STR with latest trunk builds (haven't tried with 1.5 yet):
1) Open, for example, a Bugzilla page and a page on another host with a different favicon.
2) Edit text in location bar, for example by selecting everything and hitting the space bar.
3) Close tab.
4) Do something to remove focus from location bar or hit Escape to cancel edit in location bar. Notice that favicon from site 2 persists despite URL of site 1 now being (properly) present in location bar. This favicon will also be part of the drag image if you drag from the location bar (although the proper favicon will be given to the drag destination where applicable).
Not a big deal, but potentially a source of user confusion, especially when the favicon in the tab doesn't match the one in the location bar.
| Assignee | ||
Comment 1•19 years ago
|
||
Yeah, this happens in 1.5 as well, so both branch and trunk.
| Assignee | ||
Comment 2•18 years ago
|
||
Heh. Step 3 can also be "change tabs"; you don't even have to close a tab to get it to happen as long as there's an active edit in the location bar when you change tabs.
Note to self: we should definitely update the favicon when undoing an edit
http://mxr.mozilla.org/mozilla/source/camino/src/browser/AutoCompleteTextField.mm#836
and we should probably update it on didEndEditing as well (which should catch the "something to remove focus" case, such as clicking in the content area).
I would also go so far as to argue we should update it whenever the tab changes, since we do that with the RSS feed indicator, the lock icon, and the secure background colour, and the favicon is at least as much a part of a site's "identity" as the two https indications are.
Hardware: Macintosh → All
| Assignee | ||
Comment 3•18 years ago
|
||
Nick, do you mind taking a look at this? (It also incorporates the change from the feed bug and its associated whitespace fixes, so the BrowserWrapper changes look a lot bigger than normal.)
Assignee: nobody → cl-bugs-new
Status: NEW → ASSIGNED
Attachment #319917 -
Flags: review?(nick.kreeger)
| Assignee | ||
Comment 4•18 years ago
|
||
smfr, is there a historical reason we had the ignoreTyping: parameter on the updateSiteIcons: method? It seemed to me that the only thing that parameter was doing was allowing this bug to happen ;) so I just removed it.
Summary: Favicon in location bar can get out of sync with actual page favicon when closing tabs while editing location bar → Favicon in location bar can get out of sync with actual page favicon when closing or switching tabs while editing location bar
Comment 5•18 years ago
|
||
Alas my checkin comment was not useful. I don't recall what ignoreTyping: was for.
| Assignee | ||
Comment 6•18 years ago
|
||
Bitrotted by other landings. Here's an updated patch against today's CVS.
Attachment #319917 -
Attachment is obsolete: true
Attachment #324201 -
Flags: review?(nick.kreeger)
Attachment #319917 -
Flags: review?(nick.kreeger)
| Assignee | ||
Comment 7•18 years ago
|
||
Whoops. Forgot one of the important changes. That'll teach me to ensure patches build :-p
Attachment #324201 -
Attachment is obsolete: true
Attachment #324477 -
Flags: review?(nick.kreeger)
Attachment #324201 -
Flags: review?(nick.kreeger)
Updated•18 years ago
|
Attachment #324477 -
Flags: review+
| Assignee | ||
Updated•18 years ago
|
Attachment #324477 -
Flags: superreview?(mikepinkerton)
| Assignee | ||
Comment 8•18 years ago
|
||
Comment on attachment 324477 [details] [diff] [review]
fix v1.1
Asking for sr from pink. Dunno if Nick is going to get to this anytime soon, but at least it has one review.
| Assignee | ||
Updated•18 years ago
|
Attachment #324477 -
Flags: review?(nick.kreeger)
Updated•17 years ago
|
Attachment #324477 -
Flags: superreview?(mikepinkerton) → superreview+
Comment 9•17 years ago
|
||
Comment on attachment 324477 [details] [diff] [review]
fix v1.1
sr=pink
Landed on cvs trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•