Bug 395423 - Site icon in the location bar can get out of sync with actual page site icon when closing or switching tabs while editing in the location bar.  Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=hendy, sr=pink